--- a/src/app/components/bookmark/bookmark.component.html
+++ b/src/app/components/bookmark/bookmark.component.html
@@ -1,5 +1,5 @@
 <!-- bookmark.component.html -->
-<div>
+<div *ngIf="!isTrendingForSearch">
   <div *ngIf="mediaItem" class="flex flex-col gap-[10px]">
     <div
       class="bookmark-thumbnail bg-cover bg-center rounded-lg relative cursor-pointer group overflow-hidden"
@@ -115,6 +115,112 @@
     </div>
     <!-- div to be shown when isTrending is true -->
     <div class="flex flex-col gap-[6px]" *ngIf="!mediaItem.isTrending">
+      <div class="flex items-center gap-[7px]">
+        <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+          {{mediaItem.year}}
+        </p>
+        <div class="flex items-center gap-[6px]">
+          <div
+            class="w-[3px] h-[3px] bg-pure-white bg-opacity-45 rounded-full"
+          ></div>
+          <div class="flex items-center gap-1">
+            <img
+              src="assets/icon-category-movie.svg"
+              class="w-[10px] h-[10px] md:w-[12px] md:h-[12px]"
+              alt="icon-category-movie"
+            />
+            <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+              {{mediaItem.category}}
+            </p>
+          </div>
+        </div>
+        <div class="flex items-center gap-[6px]">
+          <div
+            class="w-[3px] h-[3px] bg-pure-white bg-opacity-45 rounded-full"
+          ></div>
+          <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+            {{mediaItem.rating}}
+          </p>
+        </div>
+      </div>
+      <div>
+        <p class="text-[14px] md:text-heading-xs font-medium text-pure-white">
+          {{mediaItem.title}}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- bookmark.component.html -->
+<div *ngIf="isTrendingForSearch">
+  <div *ngIf="mediaItem" class="flex flex-col gap-[10px]">
+    <div
+      class="bookmark-thumbnail w-[164px] h-[110px] md:w-[220px] md:h-[140px] lg:w-[280px] lg:h-[174px] p-2 md:p-4 bg-cover bg-center rounded-lg relative cursor-pointer group overflow-hidden"
+      (mouseenter)="isHovered = true"
+      (mouseleave)="isHovered = false"
+      aria-label="First media item background"
+    >
+      <div
+        class="w-full h-full absolute top-0 left-0 rounded-lg bg-cover bg-center duration-300 lg:group-hover:scale-105"
+        [ngStyle]="{
+          'background-image': getResponsiveBackgroundImage(
+            mediaItem.thumbnail,
+            mediaItem.isTrending
+          )
+        }"
+      ></div>
+      <!-- div for toggling bookmarked movie -->
+      <div class="flex items-center justify-end">
+        <div
+          class="w-8 h-8 rounded-full bg-opacity-50 flex items-center justify-center cursor-pointer z-30"
+          [ngClass]="{
+            'bg-dark-blue': !isBookmarkHovered,
+            'bg-pure-white': isBookmarkHovered,
+          }"
+          (click)="toggleBookmark()"
+          (mouseenter)="isBookmarkHovered = true"
+          (mouseleave)="isBookmarkHovered = false"
+        >
+          <!-- svgs for the bookmarks -->
+          <img
+            *ngIf="!mediaItem.isBookmarked && !isBookmarkHovered"
+            src="assets/icon-bookmark-empty.svg"
+            alt="icon-bookmark-empty"
+          />
+          <img
+            *ngIf="mediaItem.isBookmarked && !isBookmarkHovered"
+            src="assets/icon-bookmark-full.svg"
+            alt="icon-bookmark-full"
+          />
+          <img
+            *ngIf="isBookmarkHovered"
+            src="assets/icon-bookmark-hover.svg"
+            alt="icon-bookmark-full"
+          />
+        </div>
+      </div>
+      <!-- div for showing the movie details -->
+      <!-- div to be shown when isHovered is true -->
+      <div
+        class="w-full h-full absolute top-0 left-0 rounded-lg md:flex items-center justify-center transition ease-in duration-300 hidden"
+        [ngClass]="{ 'bg-black bg-opacity-50': isHovered }"
+      >
+        <div
+          *ngIf="isHovered"
+          class="bg-pure-white bg-opacity-25 rounded-[28.5px] inline-flex items-center p-[9px] pr-6 z-30"
+        >
+          <div class="flex items-center gap-[19px]">
+            <img src="assets/icon-play.svg" alt="icon-play" />
+            <div>
+              <p class="text-heading-xs text-white">Play</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- div to be shown when isTrending is true -->
+    <div class="flex flex-col gap-[6px]">
       <div class="flex items-center gap-[7px]">
         <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
           {{mediaItem.year}}
