--- a/src/app/pages/home/main/main.component.html
+++ b/src/app/pages/home/main/main.component.html
@@ -13,6 +13,7 @@
       <app-bookmark
         *ngFor="let mediaItem of searchResults"
         [mediaItem]="mediaItem"
+        [isTrendingForSearch]="true"
       ></app-bookmark>
     </div>
   </div>
