fix(search): ensure search results are displayed only when search text is provided

--- a/src/app/pages/home/main/main.component.html
+++ b/src/app/pages/home/main/main.component.html
@@ -2,7 +2,7 @@
 
 <div
   *ngIf="
-    searchResults.length > 0 && searchText.length !== 0;
+    searchResults && searchText.length > 0;
     else noSearchResults
   "
 >
