feat(bookmark): update toggleBookmark to dispatch action with mediaItem id

--- a/src/app/components/bookmark/bookmark.component.html
+++ b/src/app/components/bookmark/bookmark.component.html
@@ -28,7 +28,7 @@
             'bg-dark-blue': !isBookmarkHovered,
             'bg-pure-white': isBookmarkHovered,
           }"
-          (click)="toggleBookmark()"
+          (click)="toggleBookmark(mediaItem.id!)"
           (mouseenter)="isBookmarkHovered = true"
           (mouseleave)="isBookmarkHovered = false"
         >
@@ -178,7 +178,7 @@
             'bg-dark-blue': !isBookmarkHovered,
             'bg-pure-white': isBookmarkHovered,
           }"
-          (click)="toggleBookmark()"
+          (click)="toggleBookmark(mediaItem.id!)"
           (mouseenter)="isBookmarkHovered = true"
           (mouseleave)="isBookmarkHovered = false"
         >
