--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="flex flex-col lg:flex-row w-full min-h-screen relative md:p-[25px]">
   <!-- navigation for desktop and nav header for mobile -->
   <div
-    class="p-4 md:p-[27px] lg:w-[80px] bg-semi-dark-blue flex lg:flex-col items-center justify-between sticky md:rounded-[10px] top-0 left-0 w-full z-50"
+    class="p-4 md:p-[27px] lg:w-[80px] bg-semi-dark-blue flex lg:flex-col items-center justify-between sticky md:rounded-[10px] top-0 left-0 w-full z-40"
   >
     <div>
       <img
@@ -122,12 +122,23 @@
         />
       </div>
     </div>
-    <div class="w-6 h-6 rounded-full p-[2px] bg-pure-white">
+    <div
+      class="w-6 h-6 rounded-full p-[2px] bg-pure-white relative cursor-pointer"
+    >
       <img
         src="assets/image-avatar.png"
         class="w-full h-full"
         alt="image-avatar"
+        (click)="toggleLogout()"
       />
+
+      <div
+        *ngIf="dropLogout"
+        (click)="Logout()"
+        class="absolute top-8 -left-6 p-1 z-50 lg:-top-14 lg:-left-1 cursor-pointer lg:p-2 bg-dark-blue border-[1px] border-red rounded-xl"
+      >
+        <p class="text-white text-body-s lg:text-body-m">Logout</p>
+      </div>
     </div>
   </div>
 
@@ -136,7 +147,7 @@
     class="px-4 mt-[10px] lg:mt-0 md:mt-[33px] lg:flex-1 lg:max-h-[calc(100vh-50px)] lg:overflow-y-auto custom-scroll"
   >
     <div
-      class="sticky top-[56px] md:top-[78px] lg:top-[-1px] z-50 py-4 bg-dark-blue"
+      class="sticky top-[56px] md:top-[78px] lg:top-[-1px] z-40 py-4 bg-dark-blue"
     >
       <app-search></app-search>
     </div>
