--- a/src/app/pages/home/bookmarked/bookmarked/bookmarked.component.html
+++ b/src/app/pages/home/bookmarked/bookmarked/bookmarked.component.html
@@ -7,7 +7,7 @@
     </p>
     <div
       *ngIf="searchResults.length > 0"
-      class="mt-4 flex flex-row justify-between gap-y-4 md:gap-6 lg:gap-y-8 flex-wrap"
+      class="mt-4 flex flex-row justify-between lg:justify-start gap-y-4 md:gap-5 lg:gap-y-8 flex-wrap"
     >
       <app-bookmark
         *ngFor="let mediaItem of searchResults"
@@ -25,7 +25,7 @@
     </p>
     <div
       *ngIf="selectBookmarkedMovies$ | async as nonTrendingMediaItems"
-      class="mt-4 flex flex-row justify-between gap-y-4 md:gap-6 lg:gap-y-8 flex-wrap"
+      class="mt-4 flex flex-row justify-between lg:justify-start gap-y-4 md:gap-5 lg:gap-y-8 flex-wrap"
     >
       <app-bookmark
         *ngFor="let mediaItem of nonTrendingMediaItems"
@@ -41,7 +41,7 @@
     </p>
     <div
       *ngIf="selectBookmarkedTVShows$ | async as nonTrendingMediaItems"
-      class="mt-4 flex flex-row justify-between gap-y-4 md:gap-6 lg:gap-y-8 flex-wrap"
+      class="mt-4 flex flex-row justify-between lg:justify-start gap-y-4 md:gap-5 lg:gap-y-8 flex-wrap"
     >
       <app-bookmark
         *ngFor="let mediaItem of nonTrendingMediaItems"
